--- a/mySite/personal/templates/home.html
+++ b/mySite/personal/templates/home.html
@@ -18,8 +18,8 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-item nav-link" href="cv">Portfolio</a>
-            <a class="nav-item nav-link" href="contactme">Contact Me</a>
+            <a class="nav-item nav-link" href="/cv/">Portfolio</a>
+            <a class="nav-item nav-link" href="/contactme/">Contact Me</a>
             <a class="nav-item nav-link" href="/blog/">Blog</a>
             <a class="nav-item nav-link" href="/polls/">Polls</a>
             <a class="nav-item nav-link" href="/user_auth/">Login</a>
