--- a/mySite/polls/templates/poll.html
+++ b/mySite/polls/templates/poll.html
@@ -11,14 +11,14 @@
 <header>
     <!-- Display navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="/home/">Home</a>
+        <a class="navbar-brand" href="{% url 'home' %}">Home</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-item nav-link" href="/home/cv">Portfolio</a>
-            <a class="nav-item nav-link" href="/home/contactme">Contact Me</a>
+            <a class="nav-item nav-link" href="/cv/">Portfolio</a>
+            <a class="nav-item nav-link" href="/contactme/">Contact Me</a>
             <a class="nav-item nav-link" href="/blog/">Blog</a>
             <a class="nav-item nav-link" href="/polls/">Polls</a>
             <a class="nav-item nav-link" href="/user_auth/">Login</a>
